# AstroEduPlanner-AEOP

./: .gitignore  ANALISE_PROBLEMA_SLIDER.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECAO_SLIDER_FINAL.md  CORRECOES_MAPA_DO_CEU.md  LICENSE  MAPA_DO_CEU.md  README(1).md  README.md  README_PT.md  SLIDER_INTERATIVO.md  SOLUCAO_DEFINITIVA_MAPA.md  SUBMISSION_CHECKLIST.md  analise_astronomica.html  analise_astronomica.ipynb  app.py  create_notebook.py  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
figures/: README_FIGURES.md
src/: __init__.py  analysis.py  config.py  location.py  plotting.py  targets.py
src/i18n/: strings.py
tests/: test_analysis.py  test_location.py  test_targets.py
